--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,28 @@
-https://protected-oasis-5368.herokuapp.com/
+== README
 
-Finn Hewitt
-Cameron Stewart
-Josh Quesenberry
-Hayley Blackstock 
+This README would normally document whatever steps are necessary to get the
+application up and running.
+
+Things you may want to cover:
+
+* Ruby version
+
+* System dependencies
+
+* Configuration
+
+* Database creation
+
+* Database initialization
+
+* How to run the test suite
+
+* Services (job queues, cache servers, search engines, etc.)
+
+* Deployment instructions
+
+* ...
+
+
+Please feel free to use a different markup language if you do not plan to run
+<tt>rake doc:app</tt>.
